--- a/index.html
+++ b/index.html
@@ -3,11 +3,267 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Test Template</title>
+    <title>Spin Wheel</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
   <body>
-    <h1 class="heading">Hello Test Template</h1>
-    <p class="paragraph">Just used to test the deployment</p>
+    <div class="spin-head">
+      <h1>SPIN WHEEL</h1>
+    </div>
+
+    <div class="spin-wheel">
+      <div class="container-fluid">
+        <div class="row no-gutters">
+          <div class="col-12 col-lg-9 canvas-wrapper">
+            <div class="spin-canvas">
+              <canvas
+                id="spinnerCanvas"
+                class="p-5 canvas"
+                height="700px"
+                width="700px"
+              ></canvas>
+            </div>
+            <div class="midspin-button" id="spinbtn" onclick="spin()"></div>
+          </div>
+
+          <div class="col-12 col-lg-3 p-3 list-wrapper">
+            <nav>
+              <div class="nav nav-tabs" id="nav-tab" role="tablist">
+                <button
+                  class="nav-link active"
+                  id="spin-list-tab"
+                  data-bs-toggle="tab"
+                  data-bs-target="#spin-list"
+                  type="button"
+                  role="tab"
+                  aria-controls="spin-list"
+                  aria-selected="true"
+                >
+                  SPIN LIST
+                </button>
+                <button
+                  class="nav-link"
+                  id="skip-list-tab"
+                  data-bs-toggle="tab"
+                  data-bs-target="#skip-list"
+                  type="button"
+                  role="tab"
+                  aria-controls="skip-list"
+                  aria-selected="false"
+                >
+                  SKIP LIST
+                </button>
+                <button
+                  class="nav-link"
+                  id="result-list-tab"
+                  data-bs-toggle="tab"
+                  data-bs-target="#result-list-tab-content"
+                  type="button"
+                  role="tab"
+                  aria-controls="result-list-tab-content"
+                  aria-selected="false"
+                >
+                  RESULT LIST
+                </button>
+                <button
+                  class="nav-link"
+                  id="settings-tab"
+                  data-bs-toggle="tab"
+                  data-bs-target="#settings"
+                  type="button"
+                  role="tab"
+                  aria-controls="settings"
+                  aria-selected="false"
+                >
+                  SETTINGS
+                </button>
+              </div>
+            </nav>
+
+            <div class="tab-content" id="nav-tabContent">
+              <div
+                class="tab-pane fade show active"
+                id="spin-list"
+                role="tabpanel"
+                aria-labelledby="spin-list-tab"
+              >
+                <form action="#" name="myForm" method="post">
+                  <div class="d-flex justify-content-between">
+                    <input
+                      type="text"
+                      class="list-input mr-2 mb-5"
+                      id="text"
+                      name="text"
+                      placeholder="enter data to be inserted"
+                      required
+                    />
+                    <button
+                      type="button"
+                      id="btnAdd"
+                      class="insert-btn px-3 ml-2"
+                      onclick="addItem()"
+                    >
+                      INSERT
+                    </button>
+                  </div>
+                  <div class="spin-list" id="list"></div>
+                </form>
+
+                <button
+                  type="button"
+                  id="clear"
+                  class="insert-btn px-3 ml-2"
+                  onclick="clearList()"
+                >
+                  CLEAR
+                </button>
+              </div>
+
+              <div
+                class="tab-pane fade"
+                id="skip-list"
+                role="tabpanel"
+                aria-labelledby="skip-list-tab"
+              >
+                <div class="skip-list" id="skip-list"></div>
+              </div>
+
+              <div
+                class="tab-pane fade"
+                id="result-list-tab-content"
+                role="tabpanel"
+                aria-labelledby="result-list-tab"
+              >
+                <div class="result-list" id="result-list"></div>
+              </div>
+
+              <div
+                class="tab-pane fade"
+                id="settings"
+                role="tabpanel"
+                aria-labelledby="settings-tab"
+              >
+                <div class="slidecontainer">
+                  <input
+                    type="range"
+                    min="1000"
+                    max="10000"
+                    value="1000"
+                    class="slider"
+                    id="timeRange"
+                  />
+                  <p>Time: <span id="time"></span></p>
+
+                  <input
+                    type="range"
+                    min="1"
+                    max="5"
+                    value="3"
+                    class="slider"
+                    id="speedRange"
+                  />
+                  <p>speed: <span id="speed"></span></p>
+                  <!-- <div class="dropdown">
+                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false">
+                              Themes
+                            </button>
+                            <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                              <li><button class="dropdown-item" type="button" >Theme 1</button></li>
+                              <li><button class="dropdown-item" type="button" >Theme 2</button></li>
+                              <li><button class="dropdown-item" type="button" >Theme 3</button></li>
+                              <li><button class="dropdown-item" type="button" >Theme 4</button></li>
+                              <li><button class="dropdown-item" type="button" >Theme 5</button></li>
+                            </ul>
+                          </div> -->
+                  <div class="result-listing">
+                    <form
+                      id="no-of-list"
+                      onsubmit="createResultLists(); return false;"
+                    >
+                      <label for="quantity">No of lists:</label>
+                      <input
+                        type="number"
+                        id="noOfList"
+                        name="noOfList"
+                        min="1"
+                        max="20"
+                        value="1"
+                      />
+                      <button class="submitbtn" type="submit">Submit</button>
+                    </form>
+                  </div>
+                </div>
+              </div>
+              <!-- <div class="tab-pane fade" id="result-list-tab-content" role="tabpanel" aria-labelledby="result-list-tab">
+                    <div class="row" id="result-lists-container"></div>
+                </div> -->
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <button
+      type="button"
+      class="btn btn-primary"
+      data-bs-toggle="modal"
+      data-bs-target="#spinModal"
+      style="display: none"
+      id="resultButton"
+    >
+      RESULT
+    </button>
+
+    <div
+      class="modal fade"
+      id="spinModal"
+      tabindex="-1"
+      aria-labelledby="ModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="ModalLabel">RESULT</h5>
+          </div>
+          <div class="modal-body">
+            <p class="modal-value"></p>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              id="skipbtn"
+              class="skip-btn"
+              data-bs-dismiss="modal"
+              onclick="skipData()"
+            >
+              SKIP
+            </button>
+            <button
+              type="button"
+              id="donebtn"
+              class="done-btn"
+              data-bs-dismiss="modal"
+              onclick="doneData()"
+            >
+              DONE
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <footer>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+      <script src="index.js"></script>
+    </footer>
   </body>
 </html>
