--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
                 width="700px"
               ></canvas>
             </div>
-            <div class="midspin-button" id="spinbtn" onclick="spin()"></div>
+            <div
+              class="midspin-button"
+              id="spinbtn"
+              title="click to spin!"
+              onclick="spin()"
+            ></div>
           </div>
 
           <div class="col-12 col-lg-3 p-3 list-wrapper">
@@ -102,13 +107,14 @@
                       class="list-input mr-2 mb-5"
                       id="text"
                       name="text"
-                      placeholder="enter data to be inserted"
+                      placeholder="Add options"
                       required
                     />
                     <button
                       type="button"
                       id="btnAdd"
                       class="insert-btn px-3 ml-2"
+                      title="insert data into spin wheel"
                       onclick="addItem()"
                     >
                       INSERT
@@ -121,6 +127,7 @@
                   type="button"
                   id="clear"
                   class="insert-btn px-3 ml-2"
+                  title="clear data"
                   onclick="clearList()"
                 >
                   CLEAR
@@ -152,6 +159,7 @@
                 aria-labelledby="settings-tab"
               >
                 <div class="slidecontainer">
+                  <p class="mb-3">Time: <span id="time"></span></p>
                   <input
                     type="range"
                     min="1000"
@@ -160,7 +168,8 @@
                     class="slider"
                     id="timeRange"
                   />
-                  <p>Time: <span id="time"></span></p>
+
+                  <p class="mt-3">speed: <span id="speed"></span></p>
 
                   <input
                     type="range"
@@ -170,41 +179,22 @@
                     class="slider"
                     id="speedRange"
                   />
-                  <p>speed: <span id="speed"></span></p>
-                  <!-- <div class="dropdown">
-                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false">
-                              Themes
-                            </button>
-                            <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                              <li><button class="dropdown-item" type="button" >Theme 1</button></li>
-                              <li><button class="dropdown-item" type="button" >Theme 2</button></li>
-                              <li><button class="dropdown-item" type="button" >Theme 3</button></li>
-                              <li><button class="dropdown-item" type="button" >Theme 4</button></li>
-                              <li><button class="dropdown-item" type="button" >Theme 5</button></li>
-                            </ul>
-                          </div> -->
+
                   <div class="result-listing">
-                    <form
-                      id="no-of-list"
-                      onsubmit="createResultLists(); return false;"
-                    >
-                      <label for="quantity">No of lists:</label>
-                      <input
-                        type="number"
-                        id="noOfList"
-                        name="noOfList"
-                        min="1"
-                        max="20"
-                        value="1"
-                      />
-                      <button class="submitbtn" type="submit">Submit</button>
-                    </form>
+                    <p class="mt-3">No of Groups:</p>
+
+                    <input
+                      type="number"
+                      class="list-input"
+                      id="noOfList"
+                      name="noOfList"
+                      min="1"
+                      max="20"
+                      value="1"
+                    />
                   </div>
                 </div>
               </div>
-              <!-- <div class="tab-pane fade" id="result-list-tab-content" role="tabpanel" aria-labelledby="result-list-tab">
-                    <div class="row" id="result-lists-container"></div>
-                </div> -->
             </div>
           </div>
         </div>
@@ -241,7 +231,7 @@
             <button
               type="button"
               id="skipbtn"
-              class="skip-btn"
+              class="skip-btn btn"
               data-bs-dismiss="modal"
               onclick="skipData()"
             >
@@ -250,7 +240,7 @@
             <button
               type="button"
               id="donebtn"
-              class="done-btn"
+              class="done-btn btn"
               data-bs-dismiss="modal"
               onclick="doneData()"
             >
